--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ reqwest = { version = "0.11", features = ["json"] }
 futures = "0.3"
 tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1.0"
+serde = "1.0.180"
+serde_derive = "1.0.180"
